--- a/style.css
+++ b/style.css
@@ -1,65 +1,147 @@
-nav {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 10vh;
-    background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+
+* {
+    margin: 0;
   }
   
-  .nav-links {
+  body {
+    font-family: "Roboto", sans-serif;
+  }
+  
+  .navbar {
+    width: 100%;
+    height: 50px;
+    background-color: black;
+    position: sticky;
+    top: 0;
+  }
+  
+  .navbar-container {
     display: flex;
-    gap: 2rem;
+    align-items: center;
+    padding: 0 50px;
+    height: 100%;
+    color: white;
+    font-family: "Sen", sans-serif;
+  }
+  
+  .logo-container {
+    flex: 1;
+  }
+  
+  .logo {
+    font-size: 30px;
+    color: #4dbf00;
+  }
+  
+  .menu-container {
+    flex: 6;
+  }
+  
+  .menu-list {
+    display: flex;
     list-style: none;
   }
   
-  a {
-    text-decoration: none;
-    color: #007BFF;
-  }
-  #hamburger-nav {
-    display: none;
+  .menu-list-item {
+    margin-right: 30px;
   }
   
-  .hamburger-menu {
+  .menu-list-item.active {
+    font-weight: bold;
+  }
+  .profile-container {
+    flex: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+  }
+  
+  .profile-text-container {
+    margin: 0 20px;
+  }
+  
+  .profile-picture {
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+  }
+  
+  .toggle {
+    width: 40px;
+    height: 20px;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
     position: relative;
-    display: inline-block;
   }
   
-  .hamburger-icon {
+  .toggle-icon {
+    color: goldenrod;
+  }
+  
+  .toggle-ball {
+    width: 18px;
+    height: 18px;
+    background-color: black;
+    position: absolute;
+    right: 1px;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: 1s ease all;
+  }
+  
+  .sidebar {
+    width: 50px;
+    height: 100%;
+    background-color: black;
+    position: fixed;
+    top: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 24px;
-    width: 30px;
-    cursor: pointer;
+    align-items: center;
+    padding-top: 60px;
   }
   
-  .hamburger-icon span {
-    width: 100%;
-    height: 2px;
-    background-color: #007BFF;
+  .left-menu-icon {
+    color: white;
+    font-size: 20px;
+    margin-bottom: 40px;
   }
   
-  .menu-links {
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background-color: #fff;
-    width: fit-content;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.3s ease-in-out;
+  .container {
+    background-color: #151515;
+    min-height: calc(100vh - 50px);
+    color: white;
   }
   
-  .menu-links a {
-    display: block;
-    padding: 10px;
-    text-align: center;
+  .content-container {
+    margin-left: 50px;
   }
-  
-  .menu-links.open {
-    max-height: 300px;
-  }
-  
-  
+
+.featured-content {
+  height: 50vh;
+  padding: 50px;
+}
+
+.featured-title {
+  width: 200px;
+}
+
+.featured-desc {
+  width: 500px;
+  color: lightgray;
+  margin: 30px 0;
+}
+
+.featured-button {
+  background-color: #4dbf00;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  font-weight: bold;
+}  
